# MCP

./: README.md  cli.py  pyproject.toml  setup.py
mcp_server/: advanced_secret_detection.py  detector.py  llm_plan_generator.py  main.py  models.py  repo_scanner.py  repo_scanner_config.json  requirements.txt  security.py  validator.py
tests/: test_advanced_secret_detection.py
